--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                     Books
                 </a>
                 <div class="navbar-dropdown">
-                    <a class="navbar-item" href="books/index.html">
+                    <a class="navbar-item" href="all-books.html">
                         All books
                     </a>
-                    <a class="navbar-item" href="books/add.html">
+                    <a class="navbar-item" href="add.html">
                         Add a book
                     </a>
-                    <a class="navbar-item" href="books/update.html">
+                    <a class="navbar-item" href="update.html">
                         Update a book
                     </a>
                 </div>
@@ -47,12 +47,12 @@
             <div class="container">
                 <h1 class="title">The Library is open.</h1>
                 <h2 class="subtitle">Because reading is <strong>fundamental.</strong></h2>
-                <a href="books/index.html" class="button">See what's in store</a>
+                <a href="all-books.html" class="button">See what's in store</a>
             </div>
         </div>
     </section>
     
-    <div class="level">
+    <!-- <div class="level">
         <div class="level-item">
             <div class="card">
                 <div class="card-image">
@@ -72,7 +72,7 @@
         </div>
 
 
-    </div>
+    </div> -->
     <!-- <section class="section">
         <div class="container">
         </div>
