--- a/add.html
+++ b/add.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>The Library</title>
 </head>
 
@@ -22,7 +22,7 @@
         </div>
         <div id="navbar" class="navbar-menu">
             <div class="navbar-start">
-                <a class="navbar-item" href="../index.html">
+                <a class="navbar-item" href="index.html">
                     Home
                 </a>
                 <div class="navbar-item has-dropdown is-hoverable">
@@ -30,7 +30,7 @@
                         Books
                     </a>
                     <div class="navbar-dropdown">
-                        <a class="navbar-item" href="index.html">
+                        <a class="navbar-item" href="all-books.html">
                             All books
                         </a>
                         <a class="navbar-item" href="add.html">
@@ -60,6 +60,22 @@
                     <div class="control">
                         <input class="input" type="text" placeholder="Please enter author">
                     </div>
+                </div>
+
+                <div class="file has-name">
+                    <label class="file-label">
+                        <input class="file-input" type="file" name="resume">
+                        <span class="file-cta">
+                            <span class="file-icon">
+                                <i class="fas fa-upload"></i>
+                            </span>
+                            <span class="file-label">
+                                Choose a file…
+                            </span>
+                        </span>
+                        <span class="file-name">
+                        </span>
+                    </label>
                 </div>
 
                 <div class="field is-grouped">
