--- a/delete.html
+++ b/delete.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>The Library</title>
 </head>
 
@@ -30,7 +30,7 @@
                         Books
                     </a>
                     <div class="navbar-dropdown">
-                        <a class="navbar-item" href="index.html">
+                        <a class="navbar-item" href="all-books.html">
                             All books
                         </a>
                         <a class="navbar-item" href="add.html">
@@ -51,7 +51,7 @@
                         Books
                     </a>
                     <div class="navbar-dropdown">
-                        <a class="navbar-item" href="index.html">
+                        <a class="navbar-item" href="all-books.html">
                             All books
                         </a>
                         <a class="navbar-item" href="add.html">
@@ -70,7 +70,7 @@
             <div class="container">
                 <h1 class="title">The Library is open.</h1>
                 <h2 class="subtitle">Because reading is <strong>fundamental.</strong></h2>
-                <a href="books/index.html" class="button">See what's in store</a>
+                <a href="all-books.html" class="button">See what's in store</a>
             </div>
         </div>
     </section>
