--- a/update.html
+++ b/update.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>The Library</title>
 </head>
 
@@ -30,7 +30,7 @@
                         Books
                     </a>
                     <div class="navbar-dropdown">
-                        <a class="navbar-item" href="index.html">
+                        <a class="navbar-item" href="all-books.html">
                             All books
                         </a>
                         <a class="navbar-item" href="add.html">
@@ -51,7 +51,7 @@
                         Books
                     </a>
                     <div class="navbar-dropdown">
-                        <a class="navbar-item" href="index.html">
+                        <a class="navbar-item" href="all-books.html">
                             All books
                         </a>
                         <a class="navbar-item" href="add.html">
@@ -65,37 +65,17 @@
             </div>
         </div>
     </nav>
+
     <section class="hero">
         <div class="hero-body hero-image">
             <div class="container">
                 <h1 class="title">The Library is open.</h1>
                 <h2 class="subtitle">Because reading is <strong>fundamental.</strong></h2>
-                <a href="books/index.html" class="button">See what's in store</a>
+                <a href="all-books.html" class="button">See what's in store</a>
             </div>
         </div>
     </section>
 
-    <div class="level">
-        <div class="level-item">
-            <div class="card">
-                <div class="card-image">
-                    <figure class="image is-4by3">
-                        <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
-                    </figure>
-                </div>
-                <div class="card-content">
-                    <p class="title is-4">Book title</p>
-                    <p class="subtitle is-6">By author</p>
-                </div>
-                <div class="content">
-                    Extremely cool description of a great book.
-                </div>
-            </div>
-
-        </div>
-
-
-    </div>
     <!-- <section class="section">
         <div class="container">
         </div>
